Closed Bug 1952540 Opened 1 year ago Closed 1 year ago

"Leave without naming" notification not shown unless user interacts with the page

Categories

(Toolkit :: Startup and Profile System, defect, P1)

Firefox 138
Desktop
All
defect

Tracking

()

VERIFIED FIXED
138 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox136 --- unaffected
firefox137 --- unaffected
firefox138 --- verified

People

(Reporter: sbadau, Assigned: mossop)

References

(Blocks 2 open bugs)

Details

(Whiteboard: [fidefe-profile-management])

Attachments

(1 file)

Found in

  • Nightly 138.0a1

Affected versions

  • Nightly 138.0a1

Tested platforms

  • Affected platforms: macOS 15, Windows 11

Steps to reproduce

  1. Open the Hamburger menu, click on Profiles, and then select New Profile.
  2. Wait for the about:newprofile page to be open.
  3. Click the X to close the tab.

Expected result

  • According to the Figma specifications, a "Leave without naming" notification should appear when a user attempts to close the tab or navigate away via the URL bar while the name field is empty.

Actual result

  • The tab closes without displaying the "Leave without naming" notification. The notification only appears after clicking Done editing (without naming the profile) and then attempting to close the tab.

Regression range

  • Not a regression.

Additional notes

  • The "Leave without naming" notification also does not appear if the user navigates away by entering a new URL in the address bar.

legit blocker.

beforeunload doesn't fire if you haven't interacted with the page--we'll need a workaround

Blocks: 1927938
Severity: -- → S2
Priority: -- → P1
Summary: "Leave without naming" notification does not appear when closing the tab or navigating away → "Leave without naming" notification not shown unless user interacts with the page
Whiteboard: [fidefe-profile-management]
Assignee: nobody → dtownsend
Attachment #9472006 - Attachment description: Bug 1952540: Allow pages in the privileged about process to show beforeunload alerts regardless of user interaction. r=#layout-reviewers! → Bug 1952540: Allow chrome pages show beforeunload alerts regardless of user interaction. r=#layout-reviewers!
Pushed by dtownsend@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2cd7a5fae8ef Allow chrome pages show beforeunload alerts regardless of user interaction. r=layout-reviewers,profiles-reviewers,emilio,jhirsch
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 138 Branch

Verified as fixed using the latest Nightly 138.0a1 on macOS 15 and Windows 11 - "Leave without naming" notification is shown even if the user does not interact with the page.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: