Bug 1952540: Allow chrome pages show beforeunload alerts regardless of user interaction. r=layout-reviewers,profiles-reviewers,emilio,jhirsch

Differential Revision: https://phabricator.services.mozilla.com/D241598